# py-lib-skeleton

./: .bumpversion.cfg  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
tests/: test_py_lib_skeleton.py
